@@ -1,28 +1,24 @@
 # -*- coding: utf-8 -*-
 
 '''
-    This program is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
+    Fashion TV Player Addon
+    Author Twilight0
 
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+    SPDX-License-Identifier: GPL-3.0-only
+    See LICENSES/GPL-3.0-only for more information.
 '''
+
 from __future__ import absolute_import
 
 from sys import argv
 from tulip.compat import parse_qsl
+from tulip import bookmarks
+# noinspection PyProtectedMember, PyUnresolvedReferences
 from resources.lib import fashiontv
 
 syshandle = int(argv[1])
 sysaddon = argv[0]
-params = dict(parse_qsl(argv[2].replace('?','')))
+params = dict(parse_qsl(argv[2][1:]))
 
 ########################################################################################################################
 
@@ -51,3 +47,15 @@ elif action == 'cache_clear':
 
     from tulip.cache import clear
     clear(withyes=False)
+
+elif action == 'addBookmark':
+
+    bookmarks.add(url)
+
+elif action == 'deleteBookmark':
+
+    bookmarks.delete(url)
+
+elif action == 'bookmarks':
+
+    fashiontv.Indexer().bookmarks()
