@@ -1,25 +1,20 @@
 # -*- coding: utf-8 -*-
 
 '''
-    This program is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
+    Fashion TV Player Addon
+    Author Twilight0
 
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+    SPDX-License-Identifier: GPL-3.0-only
+    See LICENSES/GPL-3.0-only for more information.
 '''
+
 from __future__ import absolute_import
 
 import json, re
 from os.path import exists as file_exists
-from tulip import directory, client, cache, control
+from tulip import directory, client, cache, control, bookmarks
 from tulip.parsers import itertags_wrapper
+from tulip.compat import iteritems
 from base64 import b64decode
 from zlib import decompress
 from youtube_registration import register_api_keys
@@ -101,19 +96,44 @@ class Indexer:
                 'url': self.ftv_news_channel,
                 'isFolder': 'False', 'isPlayable': 'False'
             }
+            ,
+            {
+                'title': control.lang(30005),
+                'action': 'bookmarks',
+                'icon': 'bookmarks.jpg'
+            }
         ]
 
         plugin = 'plugin://plugin.video.youtube/channel/'
+        cache_clear = {'title': 30002, 'query': {'action': 'cache_clear'}}
 
         for item in self.list:
 
-            if 'url' in item:
+            if item['action'] == 'youtube':
                 item['url'] = ''.join([plugin, item['url'], '/?addon_id=', control.addonInfo('id')])
 
-            cache_clear = {'title': 30002, 'query': {'action': 'cache_clear'}}
             item.update({'cm': [cache_clear]})
 
         directory.add(self.list)
+
+    def bookmarks(self):
+
+        self.list = bookmarks.get()
+
+        if not self.list:
+            na = [{'title': control.lang(30007), 'action': None}]
+            directory.add(na)
+            return
+
+        for i in self.list:
+            bookmark = dict((k, v) for k, v in iteritems(i) if not k == 'next')
+            bookmark['delbookmark'] = i['url']
+            i.update({'cm': [{'title': 30006, 'query': {'action': 'deleteBookmark', 'url': json.dumps(bookmark)}}]})
+
+        control.sortmethods()
+        control.sortmethods('title')
+
+        directory.add(self.list, content='videos')
 
     def list_live_items(self):
 
@@ -143,7 +163,14 @@ class Indexer:
             return
 
         for item in self.list:
+
             item.update({'action': 'play', 'isFolder': 'False'})
+            bookmark = dict((k, v) for k, v in iteritems(item) if not k == 'next')
+            bookmark['delbookmark'] = item['url']
+            item.update({'cm': [{'title': 30004, 'query': {'action': 'addBookmark', 'url': json.dumps(bookmark)}}]})
+
+        control.sortmethods()
+        control.sortmethods('title')
 
         directory.add(self.list, content='videos')
 
