@@ -1,3 +1,6 @@
+[B]1.1.0[/B]
+- Add bookmarking feature
+
 [B]1.0.3[/B]
 - Added FTV news channel
 
